# uv-publish

./: README.md
.github/workflows/: main.yml
my-python-package/: README.md  pyproject.toml
my-python-package/.github/workflows/: publish.yml
my-python-package/src/my-python-package/: main.py
